<resources>
    <string name="app_name">PizzariaApp</string>
    <string name="Slogan">It\'s not Digiorno, It\'s Delivery</string>
    <string name="start_order">Start Your Order</string>
    <string name="top_pepperoni">Pepperoni      $1</string>
    <string name="top_chicken">Chicken        $1.25</string>
    <string name="top_mushrooms">Mushrooms      $.75</string>
    <string name="top_green_pepper">Green Pepper   $.75</string>
    <string name="top_olive">Olive          $.75</string>
    <string name="top_extra_cheese">Extra Cheese   $1.50</string>
    <string name="top_baby_fingers">Baby Fingers   $125.75</string>
    <string name="choose_toppings">Choose your toppings:</string>
    <string name="choose_size">Choose a size:</string>
    <string name="next">Next</string>
    <string name="chicken_topping">chicken topping</string>
    <string name="extra_cheese">extra cheese</string>
    <string name="olive_topping">olive topping</string>
    <string name="green_pepper_topping">green pepper topping</string>
    <string name="mushroom_topping">mushroom topping</string>
    <string name="pepperoni_topping">pepperoni topping</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="start_your_order">Start Your Order</string>
    <string name="total">Total price: </string>
    <string-array name="size">
        <item>Small  - $8</item>
        <item>Medium - $10</item>
        <item>Large  - $12</item>
    </string-array>
</resources>